# LED_Matrix_RP2040

./: .gitignore  .gitmodules  Application_Infomation.md  Configuration.md  Doxyfile  README.md  build.groovy  build.sh  cfg.xml  setup.sh  todo.txt
Hardware/: Interface.brd  (+7 more)
LED_Matrix/: Applications.md  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_helpers.c  Memory.md  README.md  config.h  delay_ns.S  main.cpp  matrix.cpp  matrix.h  serial.cpp  serial.h  worker.cpp
LED_Matrix/doc/: Applications.md
LED_Matrix/doc/Old/: Dot_Product.cpp
LED_Matrix/include/: CMakeLists.txt  README.md
LED_Matrix/include/BCM/: config.h
LED_Matrix/include/CRC/: CRC.h
LED_Matrix/include/CRC/CRC32/: CRC32.h
LED_Matrix/include/GPIO/: GPIO.h
LED_Matrix/include/ISR/: isr.h
LED_Matrix/include/Interface/: config.h
LED_Matrix/include/Interface/Node/: Node.h
LED_Matrix/include/Interface/Protocol/: Protocol.h
LED_Matrix/include/MBI5153/: config.h
LED_Matrix/include/Matrix/: Buffer.h  CMakeLists.txt  Factory.h  Matrix.h  Packet.h  README.md  Types.h  config.h  config.h.in  helper.h  matrix.h
LED_Matrix/include/Matrix/BCM/: memory_format.h  memory_format.h.in
LED_Matrix/include/Matrix/BUS8/: hw_config.h
LED_Matrix/include/Matrix/GEN3/: memory_format.h
LED_Matrix/include/Matrix/HUB75/: CMakeLists.txt
LED_Matrix/include/Matrix/ON_OFF/: memory_format.h
LED_Matrix/include/Matrix/PWM/: memory_format.h  memory_format.h.in
LED_Matrix/include/Matrix/S_BCM/: memory_format.h.in
LED_Matrix/include/Matrix/S_PWM/: memory_format.h.in
LED_Matrix/include/Matrix/TLC5946/: memory_format.h  memory_format.h.in
LED_Matrix/include/Matrix/TLC5958/: memory_format.h  memory_format.h.in
LED_Matrix/include/Multiplex/: Decoder.h  Direct.h  Multiplex.h
LED_Matrix/include/Multiplex/BUS8/: hw_config.h
LED_Matrix/include/SPWM/: config.h
LED_Matrix/include/Serial/: Buffer.h  CMakeLists.txt  Serial.h  config.h  config.h.in  helper.h  serial.h  types.h
LED_Matrix/include/Serial/Node/: serial.h
LED_Matrix/include/Serial/Protocol/: serial.h
LED_Matrix/include/Serial/serial_pmp/: serial_pmp.h
LED_Matrix/include/Serial/serial_uart/: CMakeLists.txt  serial_uart.h  serial_uart.h.in
LED_Matrix/include/Serial/serial_uart_dual/: serial_uart_dual.h
LED_Matrix/include/Serial/serial_uart_v2/: serial_uart.h
LED_Matrix/include/Serial/serial_usb/: dev_lowlevel.h  serial_usb.h
LED_Matrix/include/System/: IPC.h  Watchdog.h  machine.h
LED_Matrix/include/debug/: debug.h
LED_Matrix/include/serial_ring/: serial_ring.h
LED_Matrix/include/serial_spi/: serial_spi.h
LED_Matrix/lib/: CMakeLists.txt  README.md
LED_Matrix/lib/BCM/: CMakeLists.txt  matrix.cpp  worker.cpp
LED_Matrix/lib/FreeRTOS/: CMakeLists.txt
LED_Matrix/lib/MBI5153/: CMakeLists.txt  matrix.cpp  serial.cpp  worker.cpp
LED_Matrix/lib/Matrix/: CMakeLists.txt
LED_Matrix/lib/Matrix/BCM/: CMakeLists.txt  calculator.cpp  loafer.cpp  matrix.cpp  worker.cpp
LED_Matrix/lib/Matrix/MBI5153/: matrix.cpp  worker.cpp
LED_Matrix/lib/Matrix/ON_OFF/: CMakeLists.txt  matrix.cpp  worker.cpp
LED_Matrix/lib/Matrix/PWM/: CMakeLists.txt  calculator.cpp  loafer.cpp  matrix.cpp  worker.cpp
LED_Matrix/lib/Matrix/S_BCM/: CMakeLists.txt  README.md  calculator.cpp  loafer.cpp  matrix.cpp  worker.cpp
LED_Matrix/lib/Matrix/S_PWM/: CMakeLists.txt  calculator.cpp  loafer.cpp  matrix.cpp  worker.cpp
LED_Matrix/lib/Matrix/TLC5946/: CMakeLists.txt  calculator.cpp  matrix.cpp  worker.cpp
LED_Matrix/lib/Matrix/TLC5958/: CMakeLists.txt  calculator.cpp  matrix.cpp  worker.cpp
LED_Matrix/lib/Matrix/Test/: CMakeLists.txt  loafer.cpp  matrix.cpp  worker.cpp
LED_Matrix/lib/Multiplex/: CMakeLists.txt  Decoder.cpp  Direct.cpp  Multiplex.cpp
LED_Matrix/lib/Multiplex/Decoder/: CMakeLists.txt  Decoder.cpp
LED_Matrix/lib/Multiplex/Direct/: CMakeLists.txt  Direct.cpp
LED_Matrix/lib/SPWM/: CMakeLists.txt  matrix.cpp  worker.cpp
LED_Matrix/lib/Serial/: CMakeLists.txt
LED_Matrix/lib/debug/: CMakeLists.txt  debug.c
LED_Matrix/lib/include/: CMakeLists.txt
LED_Matrix/lib/serial_ring/: CMakeLists.txt  serial_ring.cpp
LED_Matrix/lib/serial_spi/: CMakeLists.txt  serial_spi.cpp
LED_Matrix/lib/serial_uart/: CMakeLists.txt  serial_uart.cpp
LED_Matrix/lib/serial_usb/: CMakeLists.txt  dev_lowlevel.c  dev_lowlevel.h
LED_Matrix/lib/src/: CMakeLists.txt  README.md
LED_Matrix/src/: CMakeLists.txt  FreeRTOSConfig.h  README.md  back.cpp  front.cpp  main.cpp
LED_Matrix/src/BCM/: CMakeLists.txt  matrix.cpp  serial.cpp  worker.cpp
LED_Matrix/src/CDC/: CMakeLists.txt  isr.cpp  main.cpp  serial.cpp
LED_Matrix/src/CRC/: CMakeLists.txt
LED_Matrix/src/GPIO/: CMakeLists.txt  GPIO.cpp
LED_Matrix/src/HT1632C/: CMakeLists.txt  config.h  isr.cpp  main.cpp  matrix.cpp  serial.cpp
LED_Matrix/src/Interface/: CMakeLists.txt
LED_Matrix/src/MBI5153/: CMakeLists.txt  matrix.cpp  serial.cpp  worker.cpp
LED_Matrix/src/Matrix/: CMakeLists.txt  Matrix.cpp
LED_Matrix/src/Multiplex/: CMakeLists.txt  Decoder.cpp  Direct.cpp  Multiplex.cpp
LED_Matrix/src/PIO/: CMakeLists.txt
LED_Matrix/src/SPWM/: CMakeLists.txt  matrix.cpp  serial.cpp  worker.cpp
LED_Matrix/src/System/: CMakeLists.txt  IPC.cpp  Watchdog.cpp  machine.cpp
LED_Matrix/src/Test/: CMakeLists.txt  matrix_main.cpp  protocol_main.cpp
LED_Matrix/src/app1/: CMakeLists.txt  isr.cpp  serial.cpp
LED_Matrix/src/app2/: CMakeLists.txt  isr.cpp  main.cpp  serial.cpp
LED_Matrix/src/app3/: CMakeLists.txt  isr.cpp  main.cpp  serial.cpp
LED_Matrix/src/pmp/: CMakeLists.txt  serial.cpp
LED_Matrix/src/poe/: CMakeLists.txt  config.h  main.cpp  matrix.cpp  serial.cpp  worker.cpp
LED_Matrix/src/ring_bus/: CMakeLists.txt  main.cpp  serial.cpp
LED_Matrix/src/spi/: CMakeLists.txt  isr.cpp
LED_Matrix/src/uart/: CMakeLists.txt  isr.cpp  main.cpp  serial.cpp
LED_Matrix/src/uart_v2/: CMakeLists.txt  isr.cpp  main.cpp  serial.cpp
LED_Matrix/src/usb/: CMakeLists.txt  README.md  isr.cpp  main.cpp  serial.cpp
LED_Matrix/src/usb_spwm/: CMakeLists.txt  debug.h  dev_lowlevel.c  isr.cpp  main.cpp  serial.cpp
(+454 files in other folders)
